Changed server name

--- a/src/Warehouse.WebApi/appsettings.json
+++ b/src/Warehouse.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WarehouseDatabase": "Server=5CG04629G7;Database=Warehouse;Trusted_Connection=True;Application Name=WarehouseApp;"
+    "WarehouseDatabase": "Server=LAPTOP-SKYPAD;Database=Warehouse;Trusted_Connection=True;Application Name=WarehouseApp;"
   },
   "Logging": {
     "LogLevel": {
